# CLI-converter

./: .gitignore  README.md  pyproject.toml
heic2jpg/: cli.py  converter.py
img2webp/: cli.py  converter.py
pdf2jpeg/: cli.py  converter.py
pdfcompress/: cli.py  converter.py
rm_bg/: cli.py  converter.py
tests/: test_rm_bg_edges_only.py
vid2audio/: cli.py  converter.py
